--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.0.13"
+    "mongoose": "^6.0.13",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
